Fixed bug #34758 (PDO_DBLIB did not implement rowCount()).